--- a/php/public/.htaccess
+++ b/php/public/.htaccess
@@ -7,3 +7,5 @@ RewriteRule ^(.*)$ index.php [QSA,L]
 SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 RewriteCond %{HTTP:Authorization} ^(.*)
 RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+
+Header set Access-Control-Allow-Origin *
