--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "router": "^1.3.8",
     "vue": "^3.5.13"
