--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.3.1",
     "router": "^1.3.8",
     "vue": "^3.5.13",
+    "vue-cookies": "^1.8.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
