--- a/php/public/.htaccess
+++ b/php/public/.htaccess
@@ -9,3 +9,9 @@ RewriteCond %{HTTP:Authorization} ^(.*)
 RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
 
 Header set Access-Control-Allow-Origin *
+
+php_value upload_max_filesize 100M
+php_value post_max_size 100M
+php_value memory_limit 256M
+php_value max_execution_time 300
+php_value max_input_time 300
